fixed styling on hats to stop them overflowing their parent divs

--- a/style.css
+++ b/style.css
@@ -104,6 +104,8 @@ body {
   display: block;
   margin-left: auto;
   margin-right: auto;
+  max-width: 100%;
+  max-height: 150px;
 }
 
 .figures {
